<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">memo.me</string>
    <string name="My_profile">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="img_header">img_header</string>
    <string name="btnLogin">LOGIN</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="msg_empty">Cannot be empty</string>
    <string name="url_token">http://jthcloudproject.elasticbeanstalk.com/api/v1/token</string>
    <string name="title_section3">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="txt_register">Not a member? Register here</string>
    <string name="str_token">token</string>
    <string name="str_access_token">access_token</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="add_vacation">Add vacation</string>
    <string name="lbl_register">REGISTER</string>
    <string name="lbl_log_in">SIGN IN</string>
    <string name="btn_register">Register</string>
    <string name="txt_password">Password</string>
    <string name="txt_username">Username</string>
    <string name="txt_email">Email</string>
    <string name="title_activity_my_profileactivity2">MyProfileactivity2</string>
    <string name="title_activity_edit_profile_activity">EditProfile_activity</string>
    <string name="LukesTestButton">BeginTest</string>
    <string name="LukesTestResult">This should change</string>
    <string name="url_get_vacations">http://jthcloudproject.elasticbeanstalk.com/api/v1/users/</string>
    <string name="title_activity_edit_vacation">EditVacationActivity</string>
    <string name="title_activity_view_my_vacations">ViewMyVacations</string>

</resources>
