<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_new2"
    tools:context="com.meeladsd.memoriesapplication.RegisterActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/txt_username"
        android:textColorHint="#fff"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/Pass_text_Field"
        android:layout_alignStart="@+id/Pass_text_Field" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:id="@+id/btn_register"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:background="#282828"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Pass_text_Field"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textAlignment="center"
        android:hint="@string/txt_password"
        android:layout_below="@+id/Email_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/Email_text"
        android:hint="@string/txt_email"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/Pass_text_Field"
        android:layout_alignStart="@+id/Pass_text_Field" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="imgRegister"
        android:src="@drawable/register_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

</RelativeLayout>
